--- a/.travis.yml
+++ b/.travis.yml
@@ -56,6 +56,6 @@ install:
       #source run_conda_forge_build_setup
       #anaconda -v login --username $USER --password $PASSWORD
 script:
-  - conda build ./recipe -m ./${CONFIG}.yaml
+  - conda build ./recipe
   - lftp -c "open -u $FTP_USERNAME,$FTP_PASSWORD $FTP_SERVER; set ssl-allow yes; set passive-mode yes; set ssl:verify-certificate no; put -O $FTP_DIRECTORY /opt/conda/conda-bld/linux-ppc64le/unzip-6.0-0.tar.bz2"
 #- upload_or_check_non_existence ./recipe conda-forge --channel=main -m ./${CONFIG}.yaml
