--- a/.travis.yml
+++ b/.travis.yml
@@ -32,8 +32,7 @@ before_install:
 install:
     # Install Miniconda.
     - |
-      echo "Anaconda"
-      sudo apt insatall -y lftp
+      echo " "
       echo "Installing a fresh version of Miniconda."
       MINICONDA_URL="https://repo.continuum.io/miniconda"
       MINICONDA_FILE="Miniconda3-latest-Linux-ppc64le.sh"
